// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > export foo, { foo2 } from './foo.json' with { "type": 'json' }; 1`] = `
"SyntaxError [1:7-1:10]: Unexpected token: 'identifier'
> 1 | export foo, { foo2 } from './foo.json' with { "type": 'json' };
    |        ^^^ Unexpected token: 'identifier'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { 1: "foo" }; 1`] = `
"SyntaxError [1:29-1:30]: Unexpected token: 'number'
> 1 | import foo from "bar" with { 1: "foo" };
    |                              ^ Unexpected token: 'number'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type:  1`] = `
"SyntaxError [1:34-1:35]: Unexpected token: 'end of source'
> 1 | import foo from "bar" with { type: 
    |                                   ^ Unexpected token: 'end of source'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: "json",  1`] = `
"SyntaxError [1:42-1:43]: Unexpected token: 'end of source'
> 1 | import foo from "bar" with { type: "json", 
    |                                           ^ Unexpected token: 'end of source'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: "json", "data-type":  1`] = `
"SyntaxError [1:55-1:56]: Unexpected token: 'end of source'
> 1 | import foo from "bar" with { type: "json", "data-type": 
    |                                                        ^ Unexpected token: 'end of source'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: "json", "data-type": "json"  1`] = `
"SyntaxError [1:62-1:63]: Expected ','
> 1 | import foo from "bar" with { type: "json", "data-type": "json" 
    |                                                               ^ Expected ','"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: "json", "data-type": "json" 1`] = `
"SyntaxError [1:56-1:62]: Expected ','
> 1 | import foo from "bar" with { type: "json", "data-type": "json"
    |                                                         ^^^^^^ Expected ','"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: "json", foo: {} }; 1`] = `
"SyntaxError [1:48-1:49]: Unexpected token: '{'
> 1 | import foo from "bar" with { type: "json", foo: {} };
    |                                                 ^ Unexpected token: '{'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: [1] }; 1`] = `
"SyntaxError [1:35-1:36]: Unexpected token: '['
> 1 | import foo from "bar" with { type: [1] };
    |                                    ^ Unexpected token: '['"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: 1 }; 1`] = `
"SyntaxError [1:35-1:36]: Unexpected token: 'number'
> 1 | import foo from "bar" with { type: 1 };
    |                                    ^ Unexpected token: 'number'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: null }; 1`] = `
"SyntaxError [1:35-1:39]: Unexpected token: 'null'
> 1 | import foo from "bar" with { type: null };
    |                                    ^^^^ Unexpected token: 'null'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import foo from "bar" with { type: undefined }; 1`] = `
"SyntaxError [1:35-1:44]: Unexpected token: 'identifier'
> 1 | import foo from "bar" with { type: undefined };
    |                                    ^^^^^^^^^ Unexpected token: 'identifier'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import x from './import-attribute-1_FIXTURE.js' with {
  type: 'json',
  'type': ''
}; 1`] = `
"SyntaxError [4:0-4:1]: Duplicate binding 'type'
  2 |   type: 'json',
  3 |   'type': ''
> 4 | };
    | ^ Duplicate binding 'type'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", ...extra) 1`] = `
"SyntaxError [1:17-1:20]: Unexpected token: '...'
> 1 | import("module", ...extra)
    |                  ^^^ Unexpected token: '...'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json" }, "extra") 1`] = `
"SyntaxError [1:35-1:42]: Expected ')'
> 1 | import("module", { type: "json" }, "extra")
    |                                    ^^^^^^^ Expected ')'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json" }, "extra") 2`] = `
"SyntaxError [1:35-1:42]: Expected ')'
> 1 | import("module", { type: "json" }, "extra")
    |                                    ^^^^^^^ Expected ')'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json" }, "extra") 3`] = `
"SyntaxError [1:35-1:42]: Expected ')'
> 1 | import("module", { type: "json" }, "extra")
    |                                    ^^^^^^^ Expected ')'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json", "extra": "value"  1`] = `
"SyntaxError [1:49-1:50]: Expected '}'
> 1 | import("module", { type: "json", "extra": "value" 
    |                                                  ^ Expected '}'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json", "extra": "value" }, "another") 1`] = `
"SyntaxError [1:53-1:62]: Expected ')'
> 1 | import("module", { type: "json", "extra": "value" }, "another")
    |                                                      ^^^^^^^^^ Expected ')'"
`;

exports[`Next - Import Attributes > Expressions - Import Attributes (fail) > import("module", { type: "json", "extra": }) 1`] = `
"SyntaxError [1:42-1:43]: Unexpected token: '}'
> 1 | import("module", { type: "json", "extra": })
    |                                           ^ Unexpected token: '}'"
`;

exports[`Next - Import Attributes > Import Attributes (pass) > async function load() { return import('module', { type: 'json' }); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "argument": {
              "options": {
                "properties": [
                  {
                    "computed": false,
                    "key": {
                      "name": "type",
                      "type": "Identifier",
                    },
                    "kind": "init",
                    "method": false,
                    "shorthand": false,
                    "type": "Property",
                    "value": {
                      "type": "Literal",
                      "value": "json",
                    },
                  },
                ],
                "type": "ObjectExpression",
              },
              "source": {
                "type": "Literal",
                "value": "module",
              },
              "type": "ImportExpression",
            },
            "type": "ReturnStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "load",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > export * as foo from './foo' with { type: 'json' }; 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "json",
          },
        },
      ],
      "exported": {
        "name": "foo",
        "type": "Identifier",
      },
      "source": {
        "type": "Literal",
        "value": "./foo",
      },
      "type": "ExportAllDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > export * from './foo' with { type: 'json' } 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "json",
          },
        },
      ],
      "exported": null,
      "source": {
        "type": "Literal",
        "value": "./foo",
      },
      "type": "ExportAllDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > export { foo } from './foo' with { type: 'html' } 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "html",
          },
        },
      ],
      "declaration": null,
      "source": {
        "type": "Literal",
        "value": "./foo",
      },
      "specifiers": [
        {
          "exported": {
            "name": "foo",
            "type": "Identifier",
          },
          "local": {
            "name": "foo",
            "type": "Identifier",
          },
          "type": "ExportSpecifier",
        },
      ],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > export { foo, } from './foo' with { type: 'html' }; 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "html",
          },
        },
      ],
      "declaration": null,
      "source": {
        "type": "Literal",
        "value": "./foo",
      },
      "specifiers": [
        {
          "exported": {
            "name": "foo",
            "type": "Identifier",
          },
          "local": {
            "name": "foo",
            "type": "Identifier",
          },
          "type": "ExportSpecifier",
        },
      ],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > export {} from './foo' with { type: 'html' }; 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "html",
          },
        },
      ],
      "declaration": null,
      "source": {
        "type": "Literal",
        "value": "./foo",
      },
      "specifiers": [],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > for await (let module of [import('module', { type: 'json' })]) {} 1`] = `
{
  "body": [
    {
      "await": true,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "module",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "let",
        "type": "VariableDeclaration",
      },
      "right": {
        "elements": [
          {
            "options": {
              "properties": [
                {
                  "computed": false,
                  "key": {
                    "name": "type",
                    "type": "Identifier",
                  },
                  "kind": "init",
                  "method": false,
                  "shorthand": false,
                  "type": "Property",
                  "value": {
                    "type": "Literal",
                    "value": "json",
                  },
                },
              ],
              "type": "ObjectExpression",
            },
            "source": {
              "type": "Literal",
              "value": "module",
            },
            "type": "ImportExpression",
          },
        ],
        "type": "ArrayExpression",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > import foo from "bar" with { type: "json" }; 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "json",
          },
        },
      ],
      "source": {
        "type": "Literal",
        "value": "bar",
      },
      "specifiers": [
        {
          "local": {
            "name": "foo",
            "type": "Identifier",
          },
          "type": "ImportDefaultSpecifier",
        },
      ],
      "type": "ImportDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > import foo from "bar" with { type: "json", "data-type": "json" }; 1`] = `
{
  "body": [
    {
      "attributes": [
        {
          "key": {
            "name": "type",
            "type": "Identifier",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "json",
          },
        },
        {
          "key": {
            "type": "Literal",
            "value": "data-type",
          },
          "type": "ImportAttribute",
          "value": {
            "type": "Literal",
            "value": "json",
          },
        },
      ],
      "source": {
        "type": "Literal",
        "value": "bar",
      },
      "specifiers": [
        {
          "local": {
            "name": "foo",
            "type": "Identifier",
          },
          "type": "ImportDefaultSpecifier",
        },
      ],
      "type": "ImportDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > import('module', { 'data-type': 'json' }); 1`] = `
{
  "body": [
    {
      "expression": {
        "options": {
          "properties": [
            {
              "computed": false,
              "key": {
                "type": "Literal",
                "value": "data-type",
              },
              "kind": "init",
              "method": false,
              "shorthand": false,
              "type": "Property",
              "value": {
                "type": "Literal",
                "value": "json",
              },
            },
          ],
          "type": "ObjectExpression",
        },
        "source": {
          "type": "Literal",
          "value": "module",
        },
        "type": "ImportExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > import('module', { type: 'json' }); 1`] = `
{
  "body": [
    {
      "expression": {
        "options": {
          "properties": [
            {
              "computed": false,
              "key": {
                "name": "type",
                "type": "Identifier",
              },
              "kind": "init",
              "method": false,
              "shorthand": false,
              "type": "Property",
              "value": {
                "type": "Literal",
                "value": "json",
              },
            },
          ],
          "type": "ObjectExpression",
        },
        "source": {
          "type": "Literal",
          "value": "module",
        },
        "type": "ImportExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Attributes > Import Attributes (pass) > var promise; for (promise = import('./2nd-param_FIXTURE.js', 'test262' in {} || undefined); false; ); 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "promise",
            "type": "Identifier",
          },
          "init": null,
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "left": {
          "name": "promise",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "options": {
            "left": {
              "left": {
                "type": "Literal",
                "value": "test262",
              },
              "operator": "in",
              "right": {
                "properties": [],
                "type": "ObjectExpression",
              },
              "type": "BinaryExpression",
            },
            "operator": "||",
            "right": {
              "name": "undefined",
              "type": "Identifier",
            },
            "type": "LogicalExpression",
          },
          "source": {
            "type": "Literal",
            "value": "./2nd-param_FIXTURE.js",
          },
          "type": "ImportExpression",
        },
        "type": "AssignmentExpression",
      },
      "test": {
        "type": "Literal",
        "value": false,
      },
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;
